update db connection and added  CultureInfo for Pardus.

--- a/QRMenuBackend/appsettings.json
+++ b/QRMenuBackend/appsettings.json
@@ -1,6 +1,7 @@
-{"ConnectionStrings": {
-  "DefaultConnection": "Server=localhost;Database=QRMenuDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-},
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=XXX.XXX.XX.XXX;Database=Fupico_Menu;User ID=USERNAME;Password=PASSWORD;MultipleActiveResultSets=true;Trusted_Connection=False;Encrypt=True;TrustServerCertificate=True"
+  },
 
   "Logging": {
     "LogLevel": {
