--- a/QRMenuBackend/appsettings.json
+++ b/QRMenuBackend/appsettings.json
@@ -1,12 +1,19 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=XXX.XXX.XX.XXX;Database=Fupico_Menu;User ID=USERNAME;Password=PASSWORD;MultipleActiveResultSets=true;Trusted_Connection=False;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=185.210.95.234;Database=FuPiCo_Menu;User ID=FuPiCo_Menu_User;Password=#S01u8iv6vs_0bI535;MultipleActiveResultSets=true;Trusted_Connection=False;Encrypt=True;TrustServerCertificate=True"
+  },
+  
+  "JwtSettings": {
+    "SecretKey": "Your1923TStrongSecretKeyWhichIsAtLeast32CharactersLong12345!",
+    "Issuer": "FuPiCoMenu",
+    "Audience": "FuPiCoAudience",
+    "ExpiryInMinutes": 60
   },
 
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
   },
   "AllowedHosts": "*"
