finish fupico menu backend.

--- a/QRMenuBackend/appsettings.json
+++ b/QRMenuBackend/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=185.210.95.234;Database=FuPiCo_Menu;User ID=FuPiCo_Menu_User;Password=#S01u8iv6vs_0bI535;MultipleActiveResultSets=true;Trusted_Connection=False;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=185.XXX.95.XXX;Database=FuPiCo_MenuDB;User ID=menuuser;Password=password;MultipleActiveResultSets=true;Trusted_Connection=False;Encrypt=True;TrustServerCertificate=True"
   },
   
   "JwtSettings": {
-    "SecretKey": "Your1923TStrongSecretKeyWhichIsAtLeast32CharactersLong12345!",
+    "SecretKey": "!",
     "Issuer": "FuPiCoMenu",
     "Audience": "FuPiCoAudience",
     "ExpiryInMinutes": 60
